# vortex

./: Cargo.toml
encodings/fsst/src/: canonical.rs
vortex/: Cargo.toml
vortex-array/: Cargo.toml
vortex-array/src/array/chunked/: canonical.rs
vortex-array/src/array/varbinview/: mod.rs
vortex-array/src/array/varbinview/compute/: mod.rs
vortex-dtype/: Cargo.toml
vortex-dtype/src/: lib.rs
vortex-dtype/src/serde/: mod.rs
vortex-expr/: Cargo.toml
vortex-expr/src/: lib.rs
vortex-file/: Cargo.toml
vortex-file/src/read/: metadata.rs  recordbatchreader.rs  stream.rs
vortex-io/: Cargo.toml
vortex-io/src/: lib.rs
vortex-io/src/dispatcher/: mod.rs  sync.rs
vortex-ipc/: Cargo.toml
vortex-sampling-compressor/: Cargo.toml
vortex-sampling-compressor/src/: lib.rs
vortex-sampling-compressor/src/compressors/: mod.rs
vortex-scalar/: Cargo.toml
vortex-scalar/src/: lib.rs
vortex-scalar/src/serde/: mod.rs
vortex/src/: lib.rs
