[package]
name = "vortex-expr"
version = { workspace = true }
description = "Vortex Expressions"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[lib]
name = "vortex_expr"
path = "src/lib.rs"
bench = false

[lints]
workspace = true

[dependencies]
itertools = { workspace = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
vortex-array = { workspace = true }
vortex-dtype = { workspace = true }
vortex-error = { workspace = true }
vortex-scalar = { workspace = true }

[features]
serde = ["dep:serde", "vortex-dtype/serde", "vortex-scalar/serde"]
